# ginfo-tweaks

./: AUTHORS  ChangeLog  Makefile.am  README  TODO  configure.in  ginfotweaks.desktop.in  plauncher.desktop.in  setup.py
data/: Makefile.am
data/media/: Makefile.am
data/ui/: AboutGinfoTweaksDialog.ui  AboutPlauncherDialog.ui  GinfoTweaksWindow.ui  LauncherEntry.ui  Makefile.am  PlauncherWindow.ui  PreferencesGinfoTweaksDialog.ui  PreferencesPlauncherDialog.ui  about_ginfotweaks_dialog.xml  about_plauncher_dialog.xml  ginfotweaks_window.xml  plauncher_window.xml  preferences_ginfotweaks_dialog.xml  preferences_plauncher_dialog.xml
examples/: calc-example.launcher  example.category
ginfotweaks/: AboutGinfoTweaksDialog.py  Makefile.am  PreferencesGinfoTweaksDialog.py  ginfotweaksconfig.py.in  helpers.py  libginfotweaks.py
plauncher/: AboutPlauncherDialog.py  Makefile.am  PreferencesPlauncherDialog.py  helpers.py  libplauncher.py  plauncherconfig.py  plauncherconfig.py.in
po/: LINGUAS  POTFILES.in  en_GB.po  plauncher.pot
