AC_INIT(Plauncher, 0.3, jhernandez@emergya.com, plauncher)
dnl == AC_CONFIG_SRCDIR(src/accerciser.in)
AM_INIT_AUTOMAKE
AM_MAINTAINER_MODE([enable])

GNOME_DOC_INIT([0.17.3])

dnl == check for python ==
AM_PATH_PYTHON(2.6)

dnl == intltool check ==
IT_PROG_INTLTOOL([0.35.0])

dnl == i18n ==
GETTEXT_PACKAGE=plauncher
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [The gettext package])
AM_GLIB_GNU_GETTEXT

PROGRAMNAME_LOCALEDIR=[${datadir}/locale]
AC_SUBST(PROGRAMNAME_LOCALEDIR)

dnl == generate makefiles ==
AC_OUTPUT([
Makefile 
po/Makefile.in
bin/Makefile
plauncher/plauncherconfig.py
plauncher/Makefile
data/Makefile
data/ui/Makefile
data/media/Makefile
])
